More info in aside about optimizers

--- a/intro_to_keras_and_tf.ipynb
+++ b/intro_to_keras_and_tf.ipynb
@@ -579,13 +579,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
    "source": [
+    "We'll later talk about optimization techniques for models. We would add these in the compiling step (right before fitting the network with our data).\n",
+    "\n",
+    "Here's an example of what this might look like:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "```python\n",
+    "\n",
     "# Alterntative model to compile\n",
     "optimize_model = Sequential()\n",
     "optimize_model.add(Dense(units=30, activation='relu', input_dim=64))\n",
@@ -595,7 +606,8 @@
     "from keras import optimizers\n",
     "optimize_model.compile(loss=keras.losses.categorical_crossentropy,\n",
     "              optimizer=optimizers.SGD(lr=0.001, momentum=0.9, nesterov=True),\n",
-    "              metrics=['accuracy'])"
+    "              metrics=['accuracy'])\n",
+    "```"
    ]
   },
   {
