--- a/intro_to_keras_and_tf.ipynb
+++ b/intro_to_keras_and_tf.ipynb
@@ -39,9 +39,7 @@
     "hidden": true
    },
    "source": [
-    "## Agenda\n",
-    "\n",
-    "SWBAT:\n",
+    "## Learning Goals\n",
     "\n",
     "- Describe the concept of backpropagation\n",
     "- Explain the use of gradient descent in neural networks\n",
@@ -764,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
