add astype float

--- a/intro_to_keras_and_tf.ipynb
+++ b/intro_to_keras_and_tf.ipynb
@@ -124,8 +124,15 @@
     "# Simulation from last time\n",
     "\n",
     "w_1 = np.random.normal(0, 0.1, (X_train.shape[1], 1))\n",
-    "w_1.shape\n",
-    "\n",
+    "w_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "b_1 = 0\n",
     "\n",
     "z_1 = X_train.dot(w_1) + b_1\n",
@@ -507,8 +514,8 @@
    "outputs": [],
    "source": [
     "digits = load_digits()\n",
-    "X = digits.data\n",
-    "y = digits.target"
+    "X = digits.data.astype('float32')\n",
+    "y = digits.target.astype('float32')"
    ]
   },
   {
@@ -547,6 +554,15 @@
    "outputs": [],
    "source": [
     "model = Sequential()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model"
    ]
   },
   {
@@ -610,7 +626,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "model.fit(X, y_binary, epochs=50, batch_size=10)"
