--- a/intro_to_keras_and_tf.ipynb
+++ b/intro_to_keras_and_tf.ipynb
@@ -139,7 +139,7 @@
     "z_1\n",
     "\n",
     "output = sigmoid(z_1)\n",
-    "y_pred = output > .5\n",
+    "y_pred = output > 0.5\n",
     "y_hat = y_pred.astype(int)\n",
     "y_hat[:5]"
    ]
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train = y_train %2"
+    "y_train = y_train % 2"
    ]
   },
   {
@@ -621,6 +621,15 @@
     "### Fit the Model\n",
     "\n",
     "Now we're ready to **fit** it!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.shape"
    ]
   },
   {
