update image link

--- a/neural_network_from_scratch.ipynb
+++ b/neural_network_from_scratch.ipynb
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![nn](SimpleNN.png)"
+    "![nn](img/SimpleNN.png)"
    ]
   },
   {
@@ -369,7 +369,7 @@
     "            in2_val = pred2[j]\n",
     "            \n",
     "            # This is stochastic gradient descent since we are updating\n",
-    "            # our weights *after each data point goes through the network.\n",
+    "            # our weights *after each data point* goes through the network.\n",
     "            \n",
     "            sum_ = y[j] - in1_val*(w1*w5 + w2*w6) - in2_val*(w3*w5 + w4*w6)\n",
     "\n",
